base/jenkins/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jenkins-strip-prefix
  namespace: jenkins
spec:
  stripPrefix:
    prefixes:
      - /jenkins
    forceSlash: false
